Fix calculation of a next day in OfflineMetricsCollector to avoid DCHECK when DST kicks in.

Bug: 861647
Change-Id: I405a0221ff7a26b6e892ab738efca6102d2f54c9
Reviewed-on: https://chromium-review.googlesource.com/c/1329885
Commit-Queue: Dmitry Titov <dimich@chromium.org>
Reviewed-by: Dan H <harringtond@google.com>
Cr-Commit-Position: refs/heads/master@{#606970}
Former-commit-id: 09142f77c551ba7e95ce975970d1cd58ba947455